--- a/techStackPage.html
+++ b/techStackPage.html
@@ -66,163 +66,163 @@
     </script>
 
     <br>
-    <div class="techStackContainer">
-        <div class="infoCard">
-            <div class="container text-center">
-                <h3 id="frontEnd">
-                    <center> Programming Languages: </center>
-                </h3>
-                <div class="row row-cols-3 justify-content-center">
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="progLangName"> HTML </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/html.svg" title="HTML" width="75px"
-                                height="75px" alt="HTML Logo">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="progLangName"> CSS </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/css.svg" title="CSS" width="75px"
-                                height="75px" alt="CSS Logo">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="progLangName"> JavaScript </h6>
-                            <div class="space3px"></div>
-                            <img class="progLangIcon" src="Images/Tech Stack/javascript.svg" title="JavaScript"
-                                width="65px" height="65px" alt="JavaScript Logo">
-                        </div>
+
+    <div class="techStackCard">
+        <div class="container text-center">
+            <h3 id="frontEnd">
+                <center> Programming Languages: </center>
+            </h3>
+            <div class="row row-cols-3 justify-content-center">
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="progLangName"> HTML </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/html.svg" title="HTML" width="75px"
+                            height="75px" alt="HTML Logo">
                     </div>
                 </div>
-                <div class="row row-cols-3 justify-content-center">
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="progLangName"> Python </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/python.svg" title="Python" width="75px"
-                                height="75px" alt="Python Logo">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="progLangName"> C++ </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/c++.svg" title="C++" width="75px"
-                                height="75px" alt="C++ Logo">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="progLangName"> Dart </h6>
-                            <div class="space5px"></div>
-                            <img class="progLangIcon" src="Images/Tech Stack/dart.svg" title="Dart" width="80px"
-                                height="40px" alt="Dart Logo">
-                        </div>
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="progLangName"> CSS </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/css.svg" title="CSS" width="75px" height="75px"
+                            alt="CSS Logo">
                     </div>
                 </div>
-                <div class="row row-cols-3 justify-content-center">
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="progLangName"> SQL </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/sql.svg" title="SQL" width="70px"
-                                height="70px" alt="SQL Logo">
-                        </div>
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="progLangName"> JavaScript </h6>
+                        <div class="space3px"></div>
+                        <img class="progLangIcon" src="Images/Tech Stack/javascript.svg" title="JavaScript" width="65px"
+                            height="65px" alt="JavaScript Logo">
+                    </div>
+                </div>
+            </div>
+            <div class="row row-cols-3 justify-content-center">
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="progLangName"> Python </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/python.svg" title="Python" width="75px"
+                            height="75px" alt="Python Logo">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="progLangName"> C++ </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/c++.svg" title="C++" width="75px" height="75px"
+                            alt="C++ Logo">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="progLangName"> Dart </h6>
+                        <div class="space5px"></div>
+                        <img class="progLangIcon" src="Images/Tech Stack/dart.svg" title="Dart" width="80px"
+                            height="40px" alt="Dart Logo">
+                    </div>
+                </div>
+            </div>
+            <div class="row row-cols-3 justify-content-center">
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="progLangName"> SQL </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/sql.svg" title="SQL" width="70px" height="70px"
+                            alt="SQL Logo">
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <br>
 
 
-    <div class="techStackContainer">
-        <div class="infoCard">
-            <div class="container text-center">
-                <h3 id="frontEnd">
-                    <center> Software: </center>
-                </h3>
-                <div class="row row-cols-3 justify-content-center">
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="softwareName"> Visual Studio Code </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/visualStudioCode.svg"
-                                title="Visual Studio Code" width="50px" height="50px" alt="Visual Studio Code Logo">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="softwareName"> Android Studio </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/androidStudio.svg" title="Android Studio"
-                                width="60px" height="60px" alt="Android Studio Logo">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="softwareName"> Visual Studio </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/visualStudio.svg" title="Visual Studio"
-                                width="60px" height="60px" alt="Visual Studio Logo">
-                        </div>
+
+    <div class="techStackCard">
+        <div class="container text-center">
+            <h3 id="frontEnd">
+                <center> Software: </center>
+            </h3>
+            <div class="row row-cols-3 justify-content-center">
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="softwareName"> Visual Studio Code </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/visualStudioCode.svg"
+                            title="Visual Studio Code" width="50px" height="50px" alt="Visual Studio Code Logo">
                     </div>
                 </div>
-                <div class="row row-cols-3 justify-content-center">
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="softwareName"> VirtualBox </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/virtualbox.svg" title="VirtualBox"
-                                width="60px" height="60px" alt="VirtualBox Logo">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="softwareName"> Raspberry Pi </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/raspberryPi.svg" title="Raspberry Pi"
-                                width="60px" height="60px" alt="Raspberry Pi Logo">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="softwareName"> MATLAB </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/matlab.svg" title="MATLAB" width="75px"
-                                height="75px" alt="MATLAB Logo">
-                        </div>
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="softwareName"> Android Studio </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/androidStudio.svg" title="Android Studio"
+                            width="60px" height="60px" alt="Android Studio Logo">
                     </div>
                 </div>
-                <div class="row row-cols-3 justify-content-center">
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="techName"> GitHub </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/github.svg" title="GitHub" width="75px"
-                                height="75px" alt="GitHub Logo">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="techName"> Jupyter Notebooks </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/Jupyter.svg" title="Jupyter Notebooks"
-                                width="60px" height="60px" alt="Jupyter Logo">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="techName"> Flutter </h6>
-                            <div class="space3px"></div>
-                            <img class="progLangIcon" src="Images/Tech Stack/flutter.svg" title="Flutter" width="55px"
-                                height="55px" alt="Flutter Logo">
-                        </div>
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="softwareName"> Visual Studio </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/visualStudio.svg" title="Visual Studio"
+                            width="60px" height="60px" alt="Visual Studio Logo">
                     </div>
                 </div>
-                <div class="row row-cols-3 justify-content-center">
-                    <div class="col">
-                        <div class="progLangCube">
-                            <h6 class="techName"> Django </h6>
-                            <img class="progLangIcon" src="Images/Tech Stack/django.svg" title="Django" width="60px"
-                                height="60px" alt="Django Logo">
-                        </div>
+            </div>
+            <div class="row row-cols-3 justify-content-center">
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="softwareName"> VirtualBox </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/virtualbox.svg" title="VirtualBox" width="60px"
+                            height="60px" alt="VirtualBox Logo">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="softwareName"> Raspberry Pi </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/raspberryPi.svg" title="Raspberry Pi"
+                            width="60px" height="60px" alt="Raspberry Pi Logo">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="softwareName"> MATLAB </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/matlab.svg" title="MATLAB" width="75px"
+                            height="75px" alt="MATLAB Logo">
+                    </div>
+                </div>
+            </div>
+            <div class="row row-cols-3 justify-content-center">
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="techName"> GitHub </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/github.svg" title="GitHub" width="75px"
+                            height="75px" alt="GitHub Logo">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="techName"> Jupyter Notebooks </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/Jupyter.svg" title="Jupyter Notebooks"
+                            width="60px" height="60px" alt="Jupyter Logo">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="techName"> Flutter </h6>
+                        <div class="space3px"></div>
+                        <img class="progLangIcon" src="Images/Tech Stack/flutter.svg" title="Flutter" width="55px"
+                            height="55px" alt="Flutter Logo">
+                    </div>
+                </div>
+            </div>
+            <div class="row row-cols-3 justify-content-center">
+                <div class="col">
+                    <div class="progLangCube">
+                        <h6 class="techName"> Django </h6>
+                        <img class="progLangIcon" src="Images/Tech Stack/django.svg" title="Django" width="60px"
+                            height="60px" alt="Django Logo">
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     </div>
 
     <!-- Social Media Bar (Footer) -->
