--- a/index.html
+++ b/index.html
@@ -1,137 +1,221 @@
 <?xml version = "1.0"?>
-<!DOCTYPE HTML PUBLIC "-//w3c//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<HTML xmlns="http://www.w3.org/1999/xhtml">
-
-<head>
-    <meta charset="utf-8">
-    <link href="Styles/dayDesign.css" type="text/css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <meta name="description" content="This webpage contains information about Jadnell Reyes, 
-    a Puerto Rican Computer Engineering Student">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta charset="utf-8" />
+    <link href="Styles/dayDesign.css" type="text/css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <meta
+      name="description"
+      content="This webpage contains information about Jadnell Reyes, 
+    a Puerto Rican Computer Engineering Student"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
 
     <script type="text/javascript">
-        (function () {
-            emailjs.init('ELMXtOZt_-M3UQsLY');
-        })();
+      (function () {
+        emailjs.init("ELMXtOZt_-M3UQsLY");
+      })();
     </script>
 
-    <title> Jadnell Reyes' Portfolio </title>
-</head>
+    <title>Jadnell Reyes' Portfolio</title>
+  </head>
 
-<body>
+  <body>
     <header></header>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- One Button Navigation Bar-->
     <div class="navBar">
-        <div class="menu">
-            <div id="selectMenu">
-                <button class="menuButtons" type="button"> <img src="Images/Icons/hamburgerMenu.svg" title="Menu"
-                        width="50px" height="50px" alt="Menu Button"> </button>
-            </div>
-
-            <ul id="menuButtonsList" class="hide">
-
-                <li class="options"><button class="menuButtons"" type=" button"
-                        onclick="window.location.href='index.html';"> <img src="Images/Icons/aboutMe.svg"
-                            title="About Me" width="50px" height="50px" alt="About Me Button"> </li>
-                <h6 class="menuButtonsTitle">About Me</h6>
-
-                <li class="options"><button class="menuButtons"" type=" button"
-                        onclick="window.location.href='techStackPage.html';"> <img
-                            src="Images/Icons/programmingLanguages.svg" title="Tech Stack" width="50px" height="50px"
-                            alt="Tech Stack Button"></li>
-                <h6 class="menuButtonsTitle">Tech Stack</h6>
-                <li class="options"><button class="menuButtons"" type=" button"
-                        onclick="window.location.href='projectsPage.html';"> <img src="Images/Icons/layers.svg"
-                            title="Projects" width="50px" height="50px" alt="Projects Button"></li>
-                <h6 class="menuButtonsTitle">Projects</h6>
-            </ul>
+      <div class="menu">
+        <div id="selectMenu">
+          <button class="menuButtons" type="button">
+            <img
+              src="Images/Icons/hamburgerMenu.svg"
+              title="Menu"
+              width="50px"
+              height="50px"
+              alt="Menu Button"
+            />
+          </button>
         </div>
+
+        <ul id="menuButtonsList" class="hide">
+          <li class="options">
+            <button class="menuButtons"" type=" button"
+            onclick="window.location.href='index.html';">
+            <img
+              src="Images/Icons/aboutMe.svg"
+              title="About Me"
+              width="50px"
+              height="50px"
+              alt="About Me Button"
+            />
+          </li>
+          <h6 class="menuButtonsTitle">About Me</h6>
+
+          <li class="options">
+            <button class="menuButtons"" type=" button"
+            onclick="window.location.href='techStackPage.html';">
+            <img
+              src="Images/Icons/programmingLanguages.svg"
+              title="Tech Stack"
+              width="50px"
+              height="50px"
+              alt="Tech Stack Button"
+            />
+          </li>
+          <h6 class="menuButtonsTitle">Tech Stack</h6>
+          <li class="options">
+            <button class="menuButtons"" type=" button"
+            onclick="window.location.href='projectsPage.html';">
+            <img
+              src="Images/Icons/layers.svg"
+              title="Projects"
+              width="50px"
+              height="50px"
+              alt="Projects Button"
+            />
+          </li>
+          <h6 class="menuButtonsTitle">Projects</h6>
+        </ul>
+      </div>
     </div>
 
     <!-- Script for Navigation Bar Operation Onclick -->
     <script>
-        var selectMenu = document.getElementById("selectMenu");
-        var menuButtonsList = document.getElementById("menuButtonsList");
+      var selectMenu = document.getElementById("selectMenu");
+      var menuButtonsList = document.getElementById("menuButtonsList");
 
-        selectMenu.onclick = function () {
-            menuButtonsList.classList.toggle("hide");
-        } // end function
+      selectMenu.onclick = function () {
+        menuButtonsList.classList.toggle("hide");
+      }; // end function
 
-        for (Option of options) {
-            Option.onclick = function () {
-                menuButtonsList.classList.toggle("hide");
-            } // end function
-        } // end for
+      for (Option of options) {
+        Option.onclick = function () {
+          menuButtonsList.classList.toggle("hide");
+        }; // end function
+      } // end for
     </script>
 
     <!--Text Greeting-->
     <div id="greeting">
-        <center>
-            <h2 class="greeting"> Hello, </h2>
-            <h1 class="greeting"> my name is Jadnell H. Reyes Pérez </h1>
-            <h4 class="greeting"> Computer Engineering Graduate </h4>
-        </center>
+      <center>
+        <h2 class="greeting">Hello,</h2>
+        <h1 class="greeting">my name is Jadnell H. Reyes Pérez</h1>
+        <h4 class="greeting">Computer Engineering Graduate</h4>
+      </center>
     </div>
 
-    <br>
+    <br />
 
     <!-- Image and Info Cards Containers -->
     <div class="container text-center">
-        <div class="row">
-            <div class="col">   
-                <div class="container">
-                    <center>
-                        <a><img class="mainPictures" src="Images/Pictures/TRENZAS ME.jpg" title="Hello! This is me"
-                                width="250px" height="250px" alt="I was supposed to appear here..."></a>
-                        <br>
-                        <a><img class="mainPictures" src="Images/Pictures/BEACH.jpg" title="This is Puerto Rico"
-                                width="250px" height="250px" alt="Picture of a Beach in Puerto Rico"></a>
-                    </center>
+      <div class="row">
+        <div class="col">
+          <div class="container">
+            <center>
+              <a
+                ><img
+                  class="mainPictures"
+                  src="Images/Pictures/TRENZAS ME.jpg"
+                  title="Hello! This is me"
+                  width="250px"
+                  height="250px"
+                  alt="I was supposed to appear here..."
+              /></a>
+              <br />
+              <a
+                ><img
+                  class="mainPictures"
+                  src="Images/Pictures/BEACH.jpg"
+                  title="This is Puerto Rico"
+                  width="250px"
+                  height="250px"
+                  alt="Picture of a Beach in Puerto Rico"
+              /></a>
+            </center>
+          </div>
+        </div>
 
-                </div>
-            </div> 
+        <div class="col">
+          <div class="container">
+            <div class="infoCard">
+              <h3 id="summary">
+                <center>Summary:</center>
+              </h3>
+              <p>
+                I'm a Puerto Rican Senior Computer Engineering Student, from the
+                Polytechnic University of Puerto Rico. I have 22 years old
+                looking to improve my knowledge and skills with real life
+                experience.
+              </p>
+            </div>
+          </div>
+          <div class="placeholder"></div>
+          <div class="container">
+            <div class="infoCard">
+              <h3 id="contact">
+                <center>Contact Me:</center>
+              </h3>
 
-            <div class="col">
-                <div class="container">
-                    <div class="infoCard">
-                        <h3 id="summary">
-                            <center> Summary: </center>
-                        </h3>
-                        <p>
-                            I'm a Puerto Rican Senior Computer Engineering Student, from the Polytechnic University
-                            of Puerto Rico.
-                            I have 22 years old looking to improve my knowledge and skills with real life experience.
-                        </p>
-                    </div>
-                </div>
-                <div class="placeholder"></div>
-                <div class="container">
-                    <div class="infoCard">
-                        <h3 id="contact">
-                            <center> Contact Me: </center>
-                        </h3>
+              <!-- Contact Form: -->
+              <div class="form">
+                <input
+                  type="text"
+                  class="formButtons"
+                  id="firstName"
+                  placeholder="First Name:"
+                  required
+                />
+                <input
+                  type="text"
+                  class="formButtons"
+                  id="lastName"
+                  placeholder="Last Name:"
+                  required
+                />
+                <br />
+                <input
+                  type="email"
+                  class="formButtons"
+                  id="email"
+                  placeholder="Email:"
+                  required
+                />
+                <br />
+                <textarea
+                  placeholder="Message:"
+                  id="message"
+                  class="formButtons"
+                  required
+                ></textarea
+                ><br />
+                <button
+                  onclick="sendMail()"
+                  id="submitButton"
+                  class="formButtons"
+                  disabled
+                >
+                  Submit
+                </button>
+              </div>
 
-                        <!-- Contact Form: -->
-                        <div class="form">
-                            <input type="text" class="formButtons" id="firstName" placeholder="First Name:" required />
-                            <input type="text" class="formButtons" id="lastName" placeholder="Last Name:" required />
-                            <br>
-                            <input type="email" class="formButtons" id="email" placeholder="Email:" required /> <br>
-                            <textarea placeholder="Message:" id="message" class="formButtons" required></textarea><br>
-                            <button onclick="sendMail()" id="submitButton" class="formButtons" disabled> Submit
-                            </button>
-                        </div>
-
-                        <!-- 
+              <!-- 
                         <ul class="lists">
                             <li> <b><i>Phone Number:</i></b> <a id="link" href="tel:787-605-5895"> (787) 605-5895 </a>
                             </li>
@@ -140,75 +224,118 @@
                             </li>
                         </ul>
                         -->
-                    </div>
-                </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <script>
-        function sendMail() {
-            var params = {
-                from_name: document.getElementById("firstName").value,
-                from_lastName: document.getElementById("lastName").value,
-                email: document.getElementById("email").value,
-                message: document.getElementById("message").value
-            }
-            emailjs.send("service_owfhcj3", "template_h244kvb", params).then(function (res) {
-                alert("Message sent successfully!");
-            })
-        } 
+      function sendMail() {
+        var params = {
+          from_name: document.getElementById("firstName").value,
+          from_lastName: document.getElementById("lastName").value,
+          email: document.getElementById("email").value,
+          message: document.getElementById("message").value,
+        };
+        emailjs
+          .send("service_owfhcj3", "template_h244kvb", params)
+          .then(function (res) {
+            alert("Message sent successfully!");
+          });
+      }
     </script>
 
     <!-- Social Media Bar (Footer) -->
     <div class="container">
-        <footer>
-            <br>
-            <h4 id="socialMedia">
-                <center> Social Media: </center>
-            </h4>
+      <footer>
+        <br />
+        <h4 id="socialMedia">
+          <center>Social Media:</center>
+        </h4>
 
-            <div id="socialMediaBar">
-                <br>
-                <div class="container text-center">
-                    <div class="row">
-                        <div class="col">
-                            <div class="container">
-                                <button class="socialMediaButton" type="button"
-                                    onclick="window.location.href='https://www.instagram.com/j_dnll/';"><img
-                                        src="Images/Social Media/instagram.svg" title="Instagram" width="30px"
-                                        height="30px" alt="Instagram Button">
-                                </button>
-                                <h6 class="socialMediaTitles"> Instagram </h6>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="container">
-                                <button class="socialMediaButton" type="button"
-                                    onclick="window.location.href='https://www.twitter.com/jadnellReyes';"><img
-                                        src="Images/Social Media/twitter.svg" title="Twitter" width="30px" height="30px"
-                                        alt="Twitter Button">
-                                </button>
-                                <h6 class="socialMediaTitles"> Twitter </h6>
-                            </div>
-                        </div>
-
-                        <div class="col">
-                            <div class="container">
-                                <button class="socialMediaButton" type="button"
-                                    onclick="window.location.href='https://github.com/jadnell555';"><img
-                                        src="Images/Tech Stack/github.svg" title="GitHub" width="30px" height="30px"
-                                        alt="GitHub Button">
-                                </button>
-                                <h6 class="socialMediaTitles"> GitHub </h6>
-                            </div>
-                        </div>
-                    </div>
+        <div id="socialMediaBar">
+          <br />
+          <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                <div class="container">
+                  <button
+                    class="socialMediaButton"
+                    type="button"
+                    onclick="window.location.href='https://www.instagram.com/j_dnll/';"
+                  >
+                    <img
+                      src="Images/Social Media/instagram.svg"
+                      title="Instagram"
+                      width="30px"
+                      height="30px"
+                      alt="Instagram Button"
+                    />
+                  </button>
+                  <h6 class="socialMediaTitles">Instagram</h6>
                 </div>
+              </div>
+              <div class="col">
+                <div class="container">
+                  <button
+                    class="socialMediaButton"
+                    type="button"
+                    onclick="window.location.href='https://www.twitter.com/jadnellReyes';"
+                  >
+                    <img
+                      src="Images/Social Media/twitter.svg"
+                      title="Twitter"
+                      width="30px"
+                      height="30px"
+                      alt="Twitter Button"
+                    />
+                  </button>
+                  <h6 class="socialMediaTitles">Twitter</h6>
+                </div>
+              </div>
+
+              <div class="col">
+                <div class="container">
+                  <button
+                    class="socialMediaButton"
+                    type="button"
+                    onclick="window.location.href='https://github.com/jadnell555';"
+                  >
+                    <img
+                      src="Images/Tech Stack/github.svg"
+                      title="GitHub"
+                      width="30px"
+                      height="30px"
+                      alt="GitHub Button"
+                    />
+                  </button>
+                  <h6 class="socialMediaTitles">GitHub</h6>
+                </div>
+              </div>
+
+              <div class="col">
+                <div class="container">
+                  <button
+                    class="socialMediaButton"
+                    type="button"
+                    onclick="window.location.href='https://www.linkedin.com/in/jadnell-h-reyes-perez-301687280';"
+                  >
+                    <img
+                      src="Images/Social Media/linkedin.svg"
+                      title="LinkedIn"
+                      width="30px"
+                      height="30px"
+                      alt="LinkedIn Button"
+                    />
+                  </button>
+                  <h6 class="socialMediaTitles">LinkedIn</h6>
+                </div>
+              </div>
             </div>
-        </footer>
+          </div>
+        </div>
+      </footer>
     </div>
-
-</body>
-
-</HTML>
+  </body>
+</html>
