--- a/techStackPage.html
+++ b/techStackPage.html
@@ -113,7 +113,7 @@
             </button>
             <span id="HTMLInfo" class="hide">
               <div class="definitions">
-                <b>HTML:</b> HTML is the language in which most websites are
+                <b>HTML</b>: HTML is the language in which most websites are
                 written. HTML is used to create pages and make them functional.
                 HTML stands for Hyper Text Markup Language.
                 <br />
@@ -140,7 +140,7 @@
             </button>
             <span id="CSSInfo" class="hide">
               <div class="definitions">
-                <b>CSS:</b> Cascading Style Sheets (CSS) is a simple mechanism
+                <b>CSS</b>: Cascading Style Sheets (CSS) is a simple mechanism
                 for adding style (e.g., fonts, colors, spacing) to Web
                 documents.
                 <br />
@@ -171,7 +171,7 @@
             </button>
             <span id="JSInfo" class="hide">
               <div class="definitions">
-                <b>JavaScript:</b> JavaScript is a scripting or programming
+                <b>JavaScript</b>: JavaScript is a scripting or programming
                 language that allows you to implement complex features on web
                 pages like displaying timely content updates, interactive maps,
                 animated 2D/3D graphics, scrolling video jukeboxes, etc.
@@ -203,7 +203,7 @@
             </button>
             <span id="PythonInfo" class="hide">
               <div class="definitions">
-                <b>Python:</b> Python is an interpreted, interactive,
+                <b>Python</b>: Python is an interpreted, interactive,
                 object-oriented programming language. It incorporates modules,
                 exceptions, dynamic typing, very high level dynamic data types,
                 and classes. It supports multiple programming paradigms beyond
@@ -236,7 +236,7 @@
             </button>
             <span id="CPPInfo" class="hide">
               <div class="definitions">
-                <b>C++:</b> C++ is a cross-platform language that can be used to
+                <b>C++</b>: C++ is a cross-platform language that can be used to
                 create high-performance applications.
                 <br />
                 <cite>
@@ -265,7 +265,7 @@
             </button>
             <span id="DartInfo" class="hide">
               <div class="definitions">
-                <b>Dart:</b> Dart is a client-optimized language for developing
+                <b>Dart</b>: Dart is a client-optimized language for developing
                 fast apps on any platform. It&apos;s goal is to offer the most
                 productive programming language for multi-platform development,
                 paired with a flexible execution runtime platform for app
@@ -295,7 +295,7 @@
             </button>
             <span id="SQLInfo" class="hide">
               <div class="definitions">
-                <b>SQL:</b> Structured query language (SQL) is a programming
+                <b>SQL</b>: Structured query language (SQL) is a programming
                 language for storing and processing information in a relational
                 database. A relational database stores information in tabular
                 form, with rows and columns representing different data
@@ -339,7 +339,7 @@
             </button>
             <span id="VSCODEInfo" class="hide">
               <div class="definitions">
-                <b>Visual Studio Code:</b> Visual Studio Code is a streamlined
+                <b>Visual Studio Code</b>: Visual Studio Code is a streamlined
                 code editor with support for development operations like
                 debugging, task running, and version control. It aims to provide
                 just the tools a developer needs for a quick code-build-debug
@@ -372,7 +372,7 @@
             </button>
             <span id="AndroidStudioInfo" class="hide">
               <div class="definitions">
-                <b>Android Studio:</b> Android Studio is the official Integrated
+                <b>Android Studio</b>: Android Studio is the official Integrated
                 Development Environment (IDE) for Android app development. Based
                 on the powerful code editor and developer tools from IntelliJ
                 IDEA, Android Studio offers even more features that enhance your
@@ -404,7 +404,7 @@
             </button>
             <span id="VSInfo" class="hide">
               <div class="definitions">
-                <b>Visual Studio:</b> The Visual Studio IDE is a creative
+                <b>Visual Studio</b>: The Visual Studio IDE is a creative
                 launching pad that you can use to edit, debug, and build code,
                 and then publish an app. Over and above the standard editor and
                 debugger that most IDE&apos;s provide, Visual Studio includes
@@ -439,7 +439,7 @@
             </button>
             <span id="VirtualBoxInfo" class="hide">
               <div class="definitions">
-                <b>VirtualBox:</b> VirtualBox is a general-purpose full
+                <b>VirtualBox</b>: VirtualBox is a general-purpose full
                 virtualizer for x86 hardware, targeted at server, desktop and
                 embedded use.
                 <br />
@@ -468,7 +468,7 @@
             </button>
             <span id="RaspberryPiInfo" class="hide">
               <div class="definitions">
-                <b>Raspberry Pi:</b> Raspberry Pi is a micro computer that has
+                <b>Raspberry Pi</b>: Raspberry Pi is a micro computer that has
                 all the features you expect from a regular computer: wireless
                 internet connectivity, HDMI ports for your monitors, and USB
                 ports for your accessories, along with ample processing power
@@ -499,7 +499,7 @@
             </button>
             <span id="MATLABInfo" class="hide">
               <div class="definitions">
-                <b>MATLAB:</b> MATLAB is a programming and numeric computing
+                <b>MATLAB</b>: MATLAB is a programming and numeric computing
                 platform used by millions of engineers and scientists to analyze
                 data, develop algorithms, and create models.
                 <br />
@@ -530,7 +530,7 @@
             </button>
             <span id="GitHubInfo" class="hide">
               <div class="definitions">
-                <b>GitHub:</b> GitHub is a code hosting platform for version
+                <b>GitHub</b>: GitHub is a code hosting platform for version
                 control and collaboration. It lets you and others work together
                 on projects from anywhere.
                 <br />
@@ -559,7 +559,7 @@
             </button>
             <span id="JupyterInfo" class="hide">
               <div class="definitions">
-                <b>Jupyter Notebooks:</b> Jupyter Notebook is a simplified
+                <b>Jupyter Notebooks</b>: Jupyter Notebook is a simplified
                 notebook authoring application for interactive computing with
                 computational notebooks. A computational notebook is a shareable
                 document that combines computer code, plain language
@@ -592,7 +592,7 @@
             </button>
             <span id="FlutterInfo" class="hide">
               <div class="definitions">
-                <b>Flutter:</b> Flutter is an open source framework by Google
+                <b>Flutter</b>: Flutter is an open source framework by Google
                 for building beautiful, natively compiled, multi-platform
                 applications from a single codebase.
                 <br />
@@ -620,7 +620,7 @@
             </button>
             <span id="DjangoInfo" class="hide">
               <div class="definitions">
-                <b>Django:</b> Django is a high-level Python web framework that
+                <b>Django</b>: Django is a high-level Python web framework that
                 encourages rapid development and clean, pragmatic design. Built
                 by experienced developers, it takes care of much of the hassle
                 of web development, so you can focus on writing your app without
