--- a/techStackPage.html
+++ b/techStackPage.html
@@ -24,7 +24,7 @@
     <title>Jadnell Reyes' Portfolio</title>
   </head>
 
-  <body>
+  <body id="bodyId">
     <header></header>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
