Changes to the width of certain sections

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
         </ul>
       </div>
     </div>
-
     <script src="scripts/navBar.js"></script>
 
     <!-- ABOUT ME PAGE -->
     <section id="aboutMePage">
+      <br /><br />
       <!--Text Greeting-->
       <div id="greeting">
         <center>
@@ -215,6 +215,12 @@
 
     <!-- TECH STACK PAGE -->
     <section id="techStackPage">
+      <br /><br />
+
+      <center>
+        <h2>Programming Languages & Software:</h2>
+      </center>
+
       <br />
 
       <div class="techStackCard">
@@ -772,8 +778,11 @@
       </div>
     </section>
 
+    <script src="scripts/techStackButtons.js"></script>
+
     <!-- PROJECTS PAGE -->
     <section id="projectsPage">
+      <br />
       <center>
         <h2>Projects:</h2>
       </center>
