Rearranged Contact Area

--- a/index.html
+++ b/index.html
@@ -148,64 +148,34 @@
                 </p>
               </div>
             </div>
+
             <div class="placeholder"></div>
             <div class="container">
               <div class="infoCard">
-                <h3 id="contact">
-                  <center>Contact Me:</center>
+                <h3 id="summary">
+                  <center>Skills:</center>
                 </h3>
+                <p>
+                  I'm a Puerto Rican Senior Computer Engineering Student, from
+                  the Polytechnic University of Puerto Rico. I have 22 years old
+                  looking to improve my knowledge and skills with real life
+                  experience.
+                </p>
+              </div>
+            </div>
 
-                <!-- Contact Form: -->
-                <div class="form">
-                  <input
-                    type="text"
-                    class="formButtons"
-                    id="firstName"
-                    placeholder="First Name:"
-                    required
-                  />
-                  <input
-                    type="text"
-                    class="formButtons"
-                    id="lastName"
-                    placeholder="Last Name:"
-                    required
-                  />
-                  <br />
-                  <input
-                    type="email"
-                    class="formButtons"
-                    id="email"
-                    placeholder="Email:"
-                    required
-                  />
-                  <br />
-                  <textarea
-                    placeholder="Message:"
-                    id="message"
-                    class="formButtons"
-                    required
-                  ></textarea
-                  ><br />
-                  <button
-                    onclick=""
-                    id="submitButton"
-                    class="formButtons"
-                    disabled
-                  >
-                    Submit
-                  </button>
-                </div>
-
-                <!-- 
-                        <ul class="lists">
-                            <li> <b><i>Phone Number:</i></b> <a id="link" href="tel:787-605-5895"> (787) 605-5895 </a>
-                            </li>
-                            <li> <b><i>Email:</i></b> <a id="link" href="mailto: jadnellReyes@gmail.com">
-                                    jadnellReyes@gmail.com</a>
-                            </li>
-                        </ul>
-                        -->
+            <div class="placeholder"></div>
+            <div class="container">
+              <div class="infoCard">
+                <h3 id="summary">
+                  <center>Awards, Licenses & Certifications:</center>
+                </h3>
+                <p>
+                  I'm a Puerto Rican Senior Computer Engineering Student, from
+                  the Polytechnic University of Puerto Rico. I have 22 years old
+                  looking to improve my knowledge and skills with real life
+                  experience.
+                </p>
               </div>
             </div>
           </div>
@@ -782,7 +752,7 @@
 
     <!-- PROJECTS PAGE -->
     <section id="projectsPage">
-      <br />
+      <br /><br />
       <center>
         <h2>Projects:</h2>
       </center>
@@ -1102,96 +1072,210 @@
 
     <script src="scripts/imageSlideshow.js"></script>
 
-    <!-- Social Media Bar (Footer) -->
-    <div class="container">
-      <footer>
+    <section id="contactPage">
+      <br />
+      <h4 id="socialMedia">
+        <center>Contact:</center>
+      </h4>
+
+      <div id="socialMediaBar">
         <br />
-        <h4 id="socialMedia">
-          <center>Social Media:</center>
-        </h4>
 
-        <div id="socialMediaBar">
-          <br />
-          <div class="container text-center">
-            <div class="row">
-              <div class="col">
-                <div class="container">
-                  <button
-                    class="socialMediaButton"
-                    type="button"
-                    onclick="window.location.href='https://www.instagram.com/j_dnll/';"
-                  >
-                    <img
-                      src="Images/Social Media/instagram.svg"
-                      title="Instagram"
-                      width="30px"
-                      height="30px"
-                      alt="Instagram Button"
-                    />
-                  </button>
-                  <h6 class="socialMediaTitles">Instagram</h6>
-                </div>
-              </div>
-              <div class="col">
-                <div class="container">
-                  <button
-                    class="socialMediaButton"
-                    type="button"
-                    onclick="window.location.href='https://www.twitter.com/jadnellReyes';"
-                  >
-                    <img
-                      src="Images/Social Media/twitter.svg"
-                      title="Twitter"
-                      width="30px"
-                      height="30px"
-                      alt="Twitter Button"
-                    />
-                  </button>
-                  <h6 class="socialMediaTitles">Twitter</h6>
-                </div>
-              </div>
+        <div class="container text-center">
+          <!-- Social Media Buttons Column -->
+          <div class="row">
+            <div class="col">
+              <div class="container">
+                <div class="infoCard">
+                  <h3 id="contact">
+                    <center>Social Media:</center>
+                  </h3>
+                  <div class="row">
+                    <div class="col">
+                      <div class="container">
+                        <button
+                          class="socialMediaButton"
+                          type="button"
+                          onclick="window.location.href='https://www.instagram.com/j_dnll/';"
+                        >
+                          <img
+                            src="Images/Social Media/instagram.svg"
+                            title="Instagram"
+                            width="30px"
+                            height="30px"
+                            alt="Instagram Button"
+                          />
+                        </button>
+                        <h6 class="socialMediaTitles">Instagram</h6>
+                      </div>
+                    </div>
 
-              <div class="col">
-                <div class="container">
-                  <button
-                    class="socialMediaButton"
-                    type="button"
-                    onclick="window.location.href='https://github.com/jadnell555';"
-                  >
-                    <img
-                      src="Images/Tech Stack/github.svg"
-                      title="GitHub"
-                      width="30px"
-                      height="30px"
-                      alt="GitHub Button"
-                    />
-                  </button>
-                  <h6 class="socialMediaTitles">GitHub</h6>
-                </div>
-              </div>
+                    <div class="col">
+                      <div class="container">
+                        <button
+                          class="socialMediaButton"
+                          type="button"
+                          onclick="window.location.href='https://www.twitter.com/jadnellReyes';"
+                        >
+                          <img
+                            src="Images/Social Media/twitter.svg"
+                            title="Twitter"
+                            width="30px"
+                            height="30px"
+                            alt="Twitter Button"
+                          />
+                        </button>
+                        <h6 class="socialMediaTitles">Twitter</h6>
+                      </div>
+                    </div>
+                  </div>
 
-              <div class="col">
-                <div class="container">
-                  <button
-                    class="socialMediaButton"
-                    type="button"
-                    onclick="window.location.href='https://www.linkedin.com/in/jadnell-h-reyes-perez-301687280';"
-                  >
-                    <img
-                      src="Images/Social Media/linkedin.svg"
-                      title="LinkedIn"
-                      width="30px"
-                      height="30px"
-                      alt="LinkedIn Button"
-                    />
-                  </button>
-                  <h6 class="socialMediaTitles">LinkedIn</h6>
+                  <div class="row">
+                    <div class="col">
+                      <div class="container">
+                        <button
+                          class="socialMediaButton"
+                          type="button"
+                          onclick="window.location.href='https://github.com/jadnell555';"
+                        >
+                          <img
+                            src="Images/Tech Stack/github.svg"
+                            title="GitHub"
+                            width="30px"
+                            height="30px"
+                            alt="GitHub Button"
+                          />
+                        </button>
+                        <h6 class="socialMediaTitles">GitHub</h6>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col">
+                      <div class="container">
+                        <button
+                          class="socialMediaButton"
+                          type="button"
+                          onclick="window.location.href='https://www.linkedin.com/in/jadnell-h-reyes-perez-301687280';"
+                        >
+                          <img
+                            src="Images/Social Media/linkedin.svg"
+                            title="LinkedIn"
+                            width="30px"
+                            height="30px"
+                            alt="LinkedIn Button"
+                          />
+                        </button>
+                        <h6 class="socialMediaTitles">LinkedIn</h6>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="container">
+                        <button
+                          class="socialMediaButton"
+                          type="button"
+                          onclick="window.location.href='https://www.linkedin.com/in/jadnell-h-reyes-perez-301687280';"
+                        >
+                          <img
+                            src="Images/Social Media/linkedin.svg"
+                            title="LinkedIn"
+                            width="30px"
+                            height="30px"
+                            alt="LinkedIn Button"
+                          />
+                        </button>
+                        <h6 class="socialMediaTitles">LinkedIn</h6>
+                      </div>
+                    </div>
+                  </div>
                 </div>
+                <br />
+                <div class="resumeCard">
+                  <div class="col">
+                    <div class="container">
+                      <a
+                        id="resumeButton"
+                        type="button"
+                        onclick="window.location.href='https://www.linkedin.com/in/jadnell-h-reyes-perez-301687280';"
+                      >
+                        Resumé.pdf
+                        <img
+                          src="Images/Social Media/linkedin.svg"
+                          title="LinkedIn"
+                          width="20px"
+                          height="20px"
+                          alt="LinkedIn Button"
+                        />
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <br />
               </div>
             </div>
+            <div class="col">
+              <div class="container">
+                <div class="infoCard">
+                  <h3 id="contact">
+                    <center>Contact Me:</center>
+                  </h3>
+
+                  <!-- Contact Form: -->
+                  <div class="form">
+                    <input
+                      type="text"
+                      class="formButtons"
+                      id="firstName"
+                      placeholder="First Name:"
+                      required
+                    />
+                    <input
+                      type="text"
+                      class="formButtons"
+                      id="lastName"
+                      placeholder="Last Name:"
+                      required
+                    />
+                    <input
+                      type="email"
+                      class="formButtons"
+                      id="email"
+                      placeholder="Email:"
+                      required
+                    />
+
+                    <textarea
+                      placeholder="Message:"
+                      id="message"
+                      class="formButtons"
+                      required
+                    ></textarea>
+                    <br />
+                    <button
+                      onclick=""
+                      id="submitButton"
+                      class="formButtons"
+                      disabled
+                    >
+                      Submit
+                    </button>
+                    <!-- end contact form -->
+                  </div>
+                  <!-- end infoCard-->
+                </div>
+                <!-- end container-->
+              </div>
+              <!-- end col-->
+            </div>
           </div>
+          <!-- end container-text-center-->
         </div>
-      </footer>
-    </div>
+        <!-- end socialMediaBar-->
+      </div>
+      <!-- end contact section-->
+    </section>
+
+    <footer></footer>
   </body>
 </html>
