--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div id="selectMenu">
           <button class="menuButtons" type="button">
             <img
-              src="Images/Icons/hamburgerMenu.svg"
+              src="Images/Icons/gridFour.svg"
               title="Menu"
               width="50px"
               height="50px"
@@ -66,7 +66,7 @@
             <button class="menuButtons"" type=" button"
             onclick="window.location.href='#techStackPage';">
             <img
-              src="Images/Icons/programmingLanguages.svg"
+              src="Images/Icons/layers.svg"
               title="Tech Stack"
               width="50px"
               height="50px"
@@ -78,7 +78,7 @@
             <button class="menuButtons"" type=" button"
             onclick="window.location.href='#projectsPage';">
             <img
-              src="Images/Icons/layers.svg"
+              src="Images/Icons/projects.svg"
               title="Projects"
               width="50px"
               height="50px"
@@ -86,6 +86,18 @@
             />
           </li>
           <h6 class="menuButtonsTitle">Projects</h6>
+          <li class="options">
+            <button class="menuButtons"" type=" button"
+            onclick="window.location.href='#contactPage';">
+            <img
+              src="Images/Icons/contact1.svg"
+              title="Projects"
+              width="50px"
+              height="50px"
+              alt="Projects Button"
+            />
+          </li>
+          <h6 class="menuButtonsTitle">Contact</h6>
         </ul>
       </div>
     </div>
@@ -1115,17 +1127,17 @@
                         <button
                           class="socialMediaButton"
                           type="button"
-                          onclick="window.location.href='https://www.twitter.com/jadnellReyes';"
+                          onclick="window.location.href='https://www.x.com/jadnellReyes';"
                         >
                           <img
-                            src="Images/Social Media/twitter.svg"
+                            src="Images/Social Media/x.svg"
                             title="Twitter"
                             width="30px"
                             height="30px"
-                            alt="Twitter Button"
+                            alt="X Button"
                           />
                         </button>
-                        <h6 class="socialMediaTitles">Twitter</h6>
+                        <h6 class="socialMediaTitles">X</h6>
                       </div>
                     </div>
                   </div>
@@ -1175,17 +1187,17 @@
                         <button
                           class="socialMediaButton"
                           type="button"
-                          onclick="window.location.href='https://www.linkedin.com/in/jadnell-h-reyes-perez-301687280';"
+                          onclick="window.location.href='https://discord.com/channels/@jadnellreyes';"
                         >
                           <img
-                            src="Images/Social Media/linkedin.svg"
+                            src="Images/Social Media/discord.svg"
                             title="LinkedIn"
                             width="30px"
                             height="30px"
                             alt="LinkedIn Button"
                           />
                         </button>
-                        <h6 class="socialMediaTitles">LinkedIn</h6>
+                        <h6 class="socialMediaTitles">Discord</h6>
                       </div>
                     </div>
                   </div>
@@ -1194,14 +1206,10 @@
                 <div class="resumeCard">
                   <div class="col">
                     <div class="container">
-                      <a
-                        id="resumeButton"
-                        type="button"
-                        onclick="window.location.href='https://www.linkedin.com/in/jadnell-h-reyes-perez-301687280';"
-                      >
-                        Resumé.pdf
+                      <a id="resumeButton" type="button" onclick="href='';">
+                        <h6>Resumé.pdf</h6>
                         <img
-                          src="Images/Social Media/linkedin.svg"
+                          src="Images/Icons/downloadArrow.svg"
                           title="LinkedIn"
                           width="20px"
                           height="20px"
